@@ -2,6 +2,7 @@
 Development version (next release)
 - Made it possible to run the unit-tests independently of the provided OpenCL kernel samples
 - Added an option to compile in verbose mode for additional diagnostic messages (-DVERBOSE=ON)
+- Now using version 6.0 of the CLCudaAPI header
 - Fixed the RPATH settings on OSX
 - Added Appveyor continuous integration and increased coverage of the Travis builds
 
